--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<img src="images/puppy header.jpg" width="400px">
 <img src="images/puppy header.jpg" width="400px">
 <img src="images/puppy header.jpg" width="400px">
-	<h1>Portfolio: Leonie Harmer</h1>
+	<h1>Portfolio: Leonie Harmer!!!</h1>
 	<h2>CV</h2>
 	<h3>Biography</h3>
 
