added puppy to heading

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 	<a href="portfolio.html">Portfolio</a>
 </div>
 <h1>Portfolio</h1>
-<h3>Husky</h3>
+<h3>Husky Puppy</h3>
 <img src="images/husky1.jpg"width="400px">
 <h3>French Bulldog</h3>
 <img src="images/french bulldog.jpg"width="400px">
