--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<img src="images/puppy header.jpg" width="400px">
 <img src="images/puppy header.jpg" width="400px">
 <img src="images/puppy header.jpg" width="400px">
-	<h1>Portfolio: Leonie Harmer!!!</h1>
-	<h2>CV</h2>
+	<h1>Portfolio: Leonie Harmer</h1>
+	<h2>CV!!</h2>
 	<h3>Biography</h3>
 
 	<p>Passionate about social enterprise and having a positive impact on lives, with a love for extreme sports.</p>
@@ -29,7 +29,7 @@
 </ol>
 	<h3>Skills</h3>
 <ul>
-	<li>UK driving license</li>
+	<li>clean UK driving license</li>
 	<li>First Aid</li>
 	<li>IT</li>
 </ul>
