--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <img src="images/puppy header.jpg" width="400px">
 	<h1>Portfolio: Leonie Harmer</h1>
 	<h2>CV!!</h2>
-	<h3>Biography</h3>
+	<h3>Biography BIG CHANGE</h3>
 
 	<p>Passionate about social enterprise and having a positive impact on lives, with a love for extreme sports.</p>
 	<h3>Job History</h3>
