--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 
 	<title>Leonie Harmer: Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<div>
@@ -13,9 +14,9 @@
 	<img src="images/puppy header.jpg" width="400px">
 <img src="images/puppy header.jpg" width="400px">
 <img src="images/puppy header.jpg" width="400px">
-	<h1>Portfolio: Leonie Harmer</h1>
-	<h2>CV!!</h2>
-	<h3>Biography BIG CHANGE</h3>
+	<h1 class="important" id="square">Portfolio: Leonie Harmer</h1>
+	<h2 id="important">CV</h2>
+	<h3>Biography</h3>
 
 	<p>Passionate about social enterprise and having a positive impact on lives, with a love for extreme sports.</p>
 	<h3>Job History</h3>
