remove underline from links

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 	<div>
-	<a href="index.html">Home</a>
-	<a href="portfolio.html">Portfolio</a>
+	<a href="index.html" class="done">Home</a>
+	<a href="portfolio.html" class="done">Portfolio</a>
 </div>
-<h1>Portfolio BIG CHANGE!!!!!!</h1>
+<h1>Portfolio</h1>
 <h3>Husky Puppy</h3>
 <img src="images/husky1.jpg"width="400px">
 <h3>French Bulldog</h3>
