--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 	<div>
-	<a href="index.html">Home</a>
-	<a href="portfolio.html">Portfolio</a>
+	<a href="index.html" class="done">Home</a>
+	<a href="portfolio.html" class="done">Portfolio</a>
 </div>
-	<img src="images/puppy header.jpg" width="400px">
-<img src="images/puppy header.jpg" width="400px">
-<img src="images/puppy header.jpg" width="400px">
+	<img class="round" src="images/puppy header.jpg" width="400px">
+<img class="round" src="images/puppy header.jpg" width="400px">
+<img class="round" src="images/puppy header.jpg" width="400px">
 	<h1 class="important" id="square">Portfolio: Leonie Harmer</h1>
 	<h2 id="important">CV</h2>
 	<h3>Biography</h3>
