--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<title>Leonie Harmer: Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="index.css" href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Roboto|Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
 	<div>
@@ -12,13 +12,13 @@
 	<a href="portfolio.html" class="done">Portfolio</a>
 </div>
 	<img class="round" src="images/puppy header.jpg" width="400px">
-<img class="round" src="images/puppy header.jpg" width="400px">
-<img class="round" src="images/puppy header.jpg" width="400px">
+	<img class="round" src="images/puppy header.jpg" width="400px">
+	<img class="round" src="images/puppy header.jpg" width="400px">
 	<h1 class="important" id="square">Portfolio: Leonie Harmer</h1>
 	<h2 id="important">CV</h2>
 	<h3>Biography</h3>
 
-	<p>Passionate about social enterprise and having a positive impact on lives, with a love for extreme sports.</p>
+	<p>First year economics student at Loughborough University.</p>
 	<h3>Job History</h3>
 <ol>
 	<li>Finance Intern at Global Marine (July-August 2018)</li>
