added line under navigation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="index.css" href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Roboto|Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
-	<div>
+	<div id="header">
 	<a href="index.html" class="done">Home</a>
 	<a href="portfolio.html" class="done">Portfolio</a>
 </div>
